--- a/index.css
+++ b/index.css
@@ -14,15 +14,36 @@
 body {
 	background-color: hsl(212, 45%, 89%);
 }
+
+.container {
+	display: flex;
+	/* Viewport sizes!!! vh and vw */
+	height: 97vh;
+	width: 99vw;
+}
 #qrCodeComponent {
 	background-color: white;
 	text-align: center;
 	font-family: "Outfit";
+	border-radius: 20px;
+	width: 285px;
+	padding: 15px;
+	/* Centering */
+	/* Horizontal */
+	margin: auto;
+	/* Vertical - needs container with flex! */
+	align-self: center;
 }
 #qrCodeComponent h1 {
 	color: hsl(218, 44%, 22%);
 }
 #qrCodeComponent p {
 	color: hsl(220, 15%, 55%);
+	font-size: 15px;
+}
+#qrCodeComponent img {
+	border-radius: 15px;
+	max-height: 100%;
+	max-width: 100%;
 }
 /* </style> */
